--- a/incidencias/src/main/resources/application.properties
+++ b/incidencias/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.application.name=crud
+spring.application.name=incidencias
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3307/Test
 spring.datasource.username=root
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
