--- a/incidencias/src/main/resources/application.properties
+++ b/incidencias/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=incidencias
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3307/Test
+spring.datasource.url=jdbc:mysql://localhost:3306/Test
 spring.datasource.username=root
 spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mongodb.host=localhost
+spring.mongodb.port=27017
+spring.mongodb.database=Multidioma
 
