--- a/incidencias/src/main/resources/application.properties
+++ b/incidencias/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MongoDB
 spring.mongodb.uri=mongodb://localhost:27017/Multidioma
+
+# Para desarrollo - dentro del proyecto
+app.upload.dir=src/main/resources/static/uploads/
